--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Ghi nhận thêm 53 ca nhiễm Covid-19</h1>
+    <b>Tại cuộc họp trực tuyến Ban Chỉ đạo quốc gia phòng chống dịch bệnh Covid-19 với 2 tỉnh Hải Dương, Quảng Ninh, Bộ Y tế cho biết ngày hôm nay ghi nhận thêm 53 trường hợp nhiễm Covid-19 tại Hải Dương (47 ca), Quảng Ninh (3 ca), Hà Nội (2 ca) và Bắc Ninh (1 ca).</b>
+    <ul>
+        <li>Thông tin về việc nam nhân viên sân bay mắc Covid-19 có về Thái Nguyên đi chợ, đi ăn sáng từ ngày 10/1</li>
+        <li>TP.HCM: Sở Y tế yêu cầu tạm ngưng lễ hội, tiệc có tập trung đông người trong đơn vị để phòng dịch Covid-19</li>
+        <li>“Hà Nội sắp bị phong toả do dịch Covid-19” là tin thất thiệt, sẽ xử lý nghiêm người đăng tin</li>
+        
+    </ul>
 </body>
 </html>
