--- a/Buoi4/index.html
+++ b/Buoi4/index.html
@@ -8,19 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form>
+    
+    <form id="form">
         <div id="b1">
             <div class="b2">
             <span>Fullname</span>
-            <input type="text">
+            <input type="text" id="fullname">
             </div>
       
             <div class="b2">
             <span>Age</span>
-            <input type="Number">
+            <input type="Number" id="age">
             </div>
         </div>
         <button type="submit">ADD</button>
     </form>
+    <div id="answer">
+        <strong>List</strong>
+        <ul id="list"></ul>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
