--- a/Buoi6/index.html
+++ b/Buoi6/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <form id="form">
+        <strong>USER</strong>
         <div id="b1">
             <div class="b2">
             <span>Fullname</span>
