--- a/Buoi5/index.html
+++ b/Buoi5/index.html
@@ -10,8 +10,21 @@
 </head>
 <body>
     <div class="block1">
-        <i class="fab fa-facebook"></i>
-        <i class="fas fa-tv"></i>
+        <img class="icon1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1200px-Facebook_Logo_%282019%29.png">
+        <input type="text" placeholder="Tìm kiếm trên Facebook">
+        <i class="fas fa-home icon"></i>
+        <i class="fas fa-tv icon"></i>
+        <i class="fas fa-store icon"></i>
+        <i class="fas fa-users icon"></i>
+        <i class="fas fa-cube icon"></i>
+        <div>
+            <img class="imgicon" src="https://scontent-hkg4-2.xx.fbcdn.net/v/t1.6435-9/163151348_2846571715611606_9099631372515134744_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=zLP4JQ0pCcEAX-8gLp7&_nc_ht=scontent-hkg4-2.xx&oh=04b68175ae5c7c966689ac15d7e8322c&oe=608EB909">
+            Nguyen ...
+        </div>
+        <i class="fas fa-plus icon2"></i>
+        <i class="fab fa-facebook-messenger icon2"></i>
+        <i class="fas fa-bell icon2"></i>
+        <i class="fas fa-caret-down icon2"></i>
     </div>
     <div class="block2">
         <img src="https://scontent-hkg4-2.xx.fbcdn.net/v/t1.6435-9/163151348_2846571715611606_9099631372515134744_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=zLP4JQ0pCcEAX-8gLp7&_nc_ht=scontent-hkg4-2.xx&oh=04b68175ae5c7c966689ac15d7e8322c&oe=608EB909">
