--- a/Buoi4/index.html
+++ b/Buoi4/index.html
@@ -18,7 +18,7 @@
       
             <div class="b2">
             <span>Age</span>
-            <input type="Number" min="18" max="35" id="age" placeholder="{18-35}">
+            <input type="Number" id="age" placeholder="{0-100}">
             </div>
         </div>
         <button type="submit">ADD</button>
