--- a/Buoi5/index.html
+++ b/Buoi5/index.html
@@ -17,7 +17,7 @@
         <i class="fas fa-store icon"></i>
         <i class="fas fa-users icon"></i>
         <i class="fas fa-cube icon"></i>
-        <div>
+        <div class="block1-1">
             <img class="imgicon" src="https://scontent-hkg4-2.xx.fbcdn.net/v/t1.6435-9/163151348_2846571715611606_9099631372515134744_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=zLP4JQ0pCcEAX-8gLp7&_nc_ht=scontent-hkg4-2.xx&oh=04b68175ae5c7c966689ac15d7e8322c&oe=608EB909">
             Nguyen ...
         </div>
@@ -26,13 +26,29 @@
         <i class="fas fa-bell icon2"></i>
         <i class="fas fa-caret-down icon2"></i>
     </div>
-    <div class="block2">
+    <div class="block">
+        <div class="block2">
         <img src="https://scontent-hkg4-2.xx.fbcdn.net/v/t1.6435-9/163151348_2846571715611606_9099631372515134744_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=zLP4JQ0pCcEAX-8gLp7&_nc_ht=scontent-hkg4-2.xx&oh=04b68175ae5c7c966689ac15d7e8322c&oe=608EB909">
         <i class="fas fa-camera camera1"></i>
         <div class="block2-2">
             <i class="fas fa-camera camera2"></i>
             <span>Chỉnh sửa ảnh bìa</span>
         </div>
+        </div>
+        <div class="block3">
+            <strong>Nguyen Minh Ho Dac</strong>
+            <p>Thêm tiểu sử</p>
+        </div>
+        <div class="block4">
+            <span>Bài viết</span>
+            <span>Giới thiệu</span>
+            <span>Bạn bè <span style="font-size: 12px;">579</span></span>
+            <span>Xem thêm <i class="fas fa-caret-down icon4"></i></span>
+            <button style="background-color: #2d88ff; padding:0 15px 0 15px;margin-left: 9%;"><i class="fas fa-plus-circle"></i> Thêm vào tin</button>
+            <button><i class="fas fa-pen"></i> Chỉnh sửa trang cá nhân</button>
+            <button style="padding: 0 20px 5px 20px;">...</button>
+        </div>
     </div>
+    <i class="fas fa-edit icon5"></i>
 </body>
 </html>
