--- a/Buoi5/index.html
+++ b/Buoi5/index.html
@@ -11,9 +11,11 @@
 <body>
     <div class="block1">
         <img class="icon1" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Facebook_Logo_%282019%29.png/1200px-Facebook_Logo_%282019%29.png">
-        <input type="text" placeholder="Tìm kiếm trên Facebook">
+        <i class="fas fa-search icon6"></i>
+        <input type="text" placeholder="        Tìm kiếm trên Facebook">
         <i class="fas fa-home icon"></i>
         <i class="fas fa-tv icon"></i>
+        <p class="new">9+</p>
         <i class="fas fa-store icon"></i>
         <i class="fas fa-users icon"></i>
         <i class="fas fa-cube icon"></i>
@@ -40,15 +42,29 @@
             <p>Thêm tiểu sử</p>
         </div>
         <div class="block4">
-            <span>Bài viết</span>
-            <span>Giới thiệu</span>
-            <span>Bạn bè <span style="font-size: 12px;">579</span></span>
-            <span>Xem thêm <i class="fas fa-caret-down icon4"></i></span>
-            <button style="background-color: #2d88ff; padding:0 15px 0 15px;margin-left: 9%;"><i class="fas fa-plus-circle"></i> Thêm vào tin</button>
-            <button><i class="fas fa-pen"></i> Chỉnh sửa trang cá nhân</button>
-            <button style="padding: 0 20px 5px 20px;">...</button>
+            <span id="now">Bài viết</span>
+            <span class="block4-3">Giới thiệu</span>
+            <span class="block4-3">Bạn bè <span style="font-size: 12px;">579</span></span>
+            <span class="block4-3">Xem thêm <i class="fas fa-caret-down icon4"></i></span>
+            <button class="block4-1" style="background-color: #2d88ff; padding:0 15px 0 15px;margin-left: 9%;"><i class="fas fa-plus-circle"></i> Thêm vào tin</button>
+            <button class="block4-2"><i class="fas fa-pen"></i> Chỉnh sửa trang cá nhân</button>
+            <button class="block4-2" style="padding: 0 20px 5px 20px;">...</button>
         </div>
     </div>
-    <i class="fas fa-edit icon5"></i>
+    <div class="block5">
+        <img class="block5-1" id="box" onclick="boxchat()" src="https://scontent.fsgn2-5.fna.fbcdn.net/v/t1.6435-9/150082242_1430472140650096_2994224548256427455_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=Ak2BKO1tIwkAX8Jxpzt&_nc_ht=scontent.fsgn2-5.fna&oh=19f19678441fb9d8124f6ce668ee2b7d&oe=60962B3B">
+        <i class="fas fa-edit icon5 block5-1"></i>
+    </div>
+    <div id="block6">
+        <img class="block6-1" src="https://scontent.fsgn2-5.fna.fbcdn.net/v/t1.6435-9/150082242_1430472140650096_2994224548256427455_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=Ak2BKO1tIwkAX8Jxpzt&_nc_ht=scontent.fsgn2-5.fna&oh=19f19678441fb9d8124f6ce668ee2b7d&oe=60962B3B">
+        <span>Em Phượng</span>
+        <div class="icon6">
+            <i class="fas fa-video icon6-1"></i>
+            <i class="fas fa-phone-alt icon6-1"></i>
+            <i class="fas fa-minus icon6-1"></i>
+            <i class="fas fa-times icon6-1" onclick="close()"></i>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
