--- a/BT/index.html
+++ b/BT/index.html
@@ -25,7 +25,8 @@
             <option>K20</option>
         </select>
         <span id="note2">Vui lòng chọn khóa</span>
-        <input type="file" accept="image/*" id="input-image" required>
+        <input type="file" accept="image/*" id="input-image">
+        <span id="note3">Vui lòng chọn ảnh</span>
         <img src="" alt="" id="preview-image">
         <br>
         <input type="submit" value="submit" id="button" class="btn btn-dark">
@@ -36,7 +37,7 @@
             <tr>
                 <td>#</td>
                 <td>Họ và Tên</td>
-                <td>Khóa</td>
+                <td id="cell3">Khóa</td>
                 <td id="cell4">Image</td>
                 <td>Action</td>
             </tr>
