--- a/Buoi7/index.html
+++ b/Buoi7/index.html
@@ -47,5 +47,56 @@
         <a href="" class="blog" id="blog4">INSTAGRAM</a>
     </div>
     <p class="text4">LATEST FROM THE BLOG</p>
+    <div class="block3">
+        <div class="block3-1">
+            <div class="block3-1a">
+                06
+                <span>JAN</span>
+            </div>
+            <span class="block3-1b">Saving Green Earth</span>
+        </div>
+        <div class="block3-1">
+            <div class="block3-1a">
+                03
+                <span>JAN</span>
+            </div>
+            <span class="block3-1b">Shinny Day Out</span>
+        </div>
+        <div class="block3-1">
+            <div class="block3-1a">
+                02
+                <span>JAN</span>
+            </div>
+            <span class="block3-1b">Embracing Minimalist Lifestyle</span>
+        </div>
+        <div class="block3-1">
+            <div class="block3-1a">
+                31
+                <span>DEC</span>
+            </div>
+            <span class="block3-1b">Fear Of The Light</span>
+        </div>
+        <div class="block3-1">
+            <div class="block3-1a">
+                28
+                <span>DEC</span>
+            </div>
+            <span class="block3-1b">Ideas For Home Style</span>
+        </div>
+        <div class="block3-1">
+            <div class="block3-1a">
+                26
+                <span>DEC</span>
+            </div>
+            <span class="block3-1b">10 Outfit Ideas For 2016</span>
+        </div>
+        <div class="block3-1">
+            <div class="block3-1a">
+                24
+                <span>DEC</span>
+            </div>
+            <span class="block3-1b">Weekend Work</span>
+        </div>
+    </div>
 </body>
 </html>
