--- a/BT_S-Group/BT_Animation/Loading3/index.html
+++ b/BT_S-Group/BT_Animation/Loading3/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img src="https://freesvg.org/img/food-tiny-bubble.png" alt="">
+    <img src="https://freesvg.org/img/food-tiny-bubble.png" alt="">
+    <img src="https://freesvg.org/img/food-tiny-bubble.png" alt="">
+    <img src="https://freesvg.org/img/food-tiny-bubble.png" alt="">
+    <img src="https://freesvg.org/img/food-tiny-bubble.png" alt="">
 </body>
 </html>
