--- a/BT_S-Group/Buoi9_Bootstrap/index.html
+++ b/BT_S-Group/Buoi9_Bootstrap/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-6 shadow">
                 <div class="card-body w-75 mx-auto mt-3">
-                    <h5 class="card-title fs-4">A quick midday swim for inspiration</h5>
+                    <h5 class="card-title fs-4"><a class="text-dark" href="https://nguyenminhhodac.github.io/BT_S-Group/Buoi9_Bootstrap/index2.html">A quick midday swim for inspiration</a></h5>
                     <p class="card-text text-black-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in eros scelerisque, scelerisque nisl sit amet,...</p>
                     <hr>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
