--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -7,12 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/deb4e62b44.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="home">
         <div class="nav1">
             <img src="https://preview.erilisdesign.com/html/petri/assets/images/logo.png" alt="">
-            <button>
+            <button class="bar">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -26,6 +28,14 @@
                 <i class="fab fa-pinterest"></i>
             </div>
         </div>
+        <div class="info">
+            <h1>JAMES COOK</h1>
+            <p>Creative UI Designer</p>
+            <button class="button1" type="button">Learn more</button>
+            <button class="button2">Portfolio</button>
+        </div>
+        <p class="note">© 2018 Petri - All Rights Reserved</p>
+        <div class="bg"></div>
     </div>
 </body>
 </html>
