--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -37,5 +37,92 @@
         <p class="note">© 2018 Petri - All Rights Reserved</p>
         <div class="bg"></div>
     </div>
+    <div class="blockbody">
+        <div class="name">
+            <h1>About Me</h1>
+            <p>Mauris ut sem elementum, tristique velit sed, volutpat mauris. Ut interdum nibh sit amet imperdiet condimentum. Nulla sed tellus placerat, vehicula risus ac, sollicitudin quam. Quisque pharetra porta libero, a sagittis nisl tristique non. Etiam sapien purus, cursus eu pulvinar et, tempor sit amet ipsum. Sed a nisl sit amet lorem dictum hendrerit.</p>
+        </div>
+        <div class="work">
+            <h1>What I Do</h1>
+            <p>Fusce massa dolor, mattis sed ultrices ut, placerat ut leo. Donec sed fringilla lectus, non vulputate orci. Integer id libero euismod, interdum ligula vel, porttitor magna. Sed euismod maximus finibus. Pellentesque tempus ultricies nisi at cursus. Nulla at nisi tellus. Suspendisse potenti.</p>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            <i class="fas fa-stopwatch"></i>
+                            <h2>Launch Quickly</h2>
+                        </td>
+                        <td>
+                            <i class="fas fa-brush"></i>
+                            <h2>Stylish Design</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <i class="fas fa-book-open"></i>
+                            <h2>Well Documented</h2>
+                        </td>
+                        <td>
+                            <i class="fas fa-stopwatch"></i>
+                            <h2>Multiple Styles</h2>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <i class="fas fa-cog"></i>
+                            <h2>Fully Customizable</h2>
+                        </td>
+                        <td>
+                            <i class="fas fa-headphones"></i>
+                            <h2>Friendly Support</h2>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="portfolio">
+            <h1>Portfolio</h1>
+            <p>Donec sollicitudin libero vitae massa placerat tempor. Duis rutrum nisl eu ipsum varius, nec feugiat tortor vulputate. Integer pellentesque leo id metus dictum, a tristique tellus faucibus.</p>
+            <div>
+                <button>ALL</button>
+                <button>WED</button>
+                <button>BRAND</button>
+                <button>DESIGN</button>
+            </div>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
+            <table>
+                <tr>
+                    <td>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p>(0091) 1111 1234567</p>
+                        <p>(084) 2222 1234567</p>
+                    </td>
+                    <td>
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>69 Halsey St, New York, Ny 10002,</p>
+                        <p>United States</p>
+                    </td>
+                    <td>
+                        <i class="far fa-envelope"></i>
+                        <p>support@domain.com</p>
+                        <p>hello@domain.com</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="message">
+            <div>
+                <input type="text" placeholder="Enter your name">
+                <input type="text" placeholder="Enter your email address">
+                <input type="text" placeholder="Subject (Optional)">
+                <input type="text" placeholder="Here go your message">
+            </div>
+            <button>Send message</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
