--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -47,7 +47,7 @@
         <div class="work">
             <h1 class="title">What I Do</h1>
             <p class="text1">Fusce massa dolor, mattis sed ultrices ut, placerat ut leo. Donec sed fringilla lectus, non vulputate orci. Integer id libero euismod, interdum ligula vel, porttitor magna. Sed euismod maximus finibus. Pellentesque tempus ultricies nisi at cursus. Nulla at nisi tellus. Suspendisse potenti.</p>
-            <table>
+            <table id="table1">
                 <tbody>
                     <tr>
                         <td>
@@ -85,32 +85,41 @@
         <div id="portfolio">
             <h1 class="title">Portfolio</h1>
             <p class="text1">Donec sollicitudin libero vitae massa placerat tempor. Duis rutrum nisl eu ipsum varius, nec feugiat tortor vulputate. Integer pellentesque leo id metus dictum, a tristique tellus faucibus.</p>
-            <div>
-                <button>ALL</button>
-                <button>WED</button>
-                <button>BRAND</button>
-                <button>DESIGN</button>
+            <div id="p-button">
+                <button class="button4">ALL</button>
+                <button class="button4">WED</button>
+                <button class="button4">BRAND</button>
+                <button class="button4">DESIGN</button>
             </div>
         </div>
-        <div class="contact">
+        <div id="contact">
             <h1 class="title">Contact</h1>
-            <p class="text2">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
-            <table>
+            <p id="text2">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
+            <table id="table2">
                 <tr>
-                    <td>
-                        <i class="fas fa-mobile-alt"></i>
-                        <p>(0091) 1111 1234567</p>
-                        <p>(084) 2222 1234567</p>
+                    <td class="cell2">
+                        <i class="icon2 fas fa-mobile-alt"></i>
+                        <p>
+                            (0091) 1111 1234567 
+                            <br> 
+                            (084) 2222 1234567
+                        </p>
                     </td>
-                    <td>
-                        <i class="fas fa-map-marker-alt"></i>
-                        <p>69 Halsey St, New York, Ny 10002,</p>
-                        <p>United States</p>
+                    <td class="cell2">
+                        <i class="icon2 fas fa-map-marker-alt"></i>
+                        <p>
+                            69 Halsey St, New York, Ny 10002, 
+                            <br>
+                            United States
+                        </p>
                     </td>
-                    <td>
-                        <i class="far fa-envelope"></i>
-                        <p>support@domain.com</p>
-                        <p>hello@domain.com</p>
+                    <td class="cell2">
+                        <i class="icon2 far fa-envelope"></i>
+                        <p>
+                            support@domain.com
+                            <br>
+                            hello@domain.com
+                        </p>
                     </td>
                 </tr>
             </table>
