--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -41,97 +41,105 @@
     <div id="blockbody">
         <button id="button3"><i class="fas fa-times"></i></button>
         <div id="name">
-            <h1 class="title">About Me</h1>
-            <p class="text1">Mauris ut sem elementum, tristique velit sed, volutpat mauris. Ut interdum nibh sit amet imperdiet condimentum. Nulla sed tellus placerat, vehicula risus ac, sollicitudin quam. Quisque pharetra porta libero, a sagittis nisl tristique non. Etiam sapien purus, cursus eu pulvinar et, tempor sit amet ipsum. Sed a nisl sit amet lorem dictum hendrerit.</p>
+            <div class="container">
+                <h1 class="title">About Me</h1>
+                <p class="text1">Mauris ut sem elementum, tristique velit sed, volutpat mauris. Ut interdum nibh sit amet imperdiet condimentum. Nulla sed tellus placerat, vehicula risus ac, sollicitudin quam. Quisque pharetra porta libero, a sagittis nisl tristique non. Etiam sapien purus, cursus eu pulvinar et, tempor sit amet ipsum. Sed a nisl sit amet lorem dictum hendrerit.</p>
+            </div>
         </div>
         <div class="work">
-            <h1 class="title">What I Do</h1>
-            <p class="text1">Fusce massa dolor, mattis sed ultrices ut, placerat ut leo. Donec sed fringilla lectus, non vulputate orci. Integer id libero euismod, interdum ligula vel, porttitor magna. Sed euismod maximus finibus. Pellentesque tempus ultricies nisi at cursus. Nulla at nisi tellus. Suspendisse potenti.</p>
-            <table id="table1">
-                <tbody>
-                    <tr>
-                        <td>
-                            <i class="icon2 fas fa-stopwatch"></i>
-                            <h2>Launch Quickly</h2>
-                        </td>
-                        <td>
-                            <i class="icon2 fas fa-brush"></i>
-                            <h2>Stylish Design</h2>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <i class="icon2 fas fa-book-open"></i>
-                            <h2>Well Documented</h2>
-                        </td>
-                        <td>
-                            <i class="icon2 fas fa-layer-group"></i>
-                            <h2>Multiple Styles</h2>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <i class="icon2 fas fa-cog"></i>
-                            <h2>Fully Customizable</h2>
-                        </td>
-                        <td>
-                            <i class="icon2 fas fa-headphones"></i>
-                            <h2>Friendly Support</h2>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="container">
+                <h1 class="title">What I Do</h1>
+                <p class="text1">Fusce massa dolor, mattis sed ultrices ut, placerat ut leo. Donec sed fringilla lectus, non vulputate orci. Integer id libero euismod, interdum ligula vel, porttitor magna. Sed euismod maximus finibus. Pellentesque tempus ultricies nisi at cursus. Nulla at nisi tellus. Suspendisse potenti.</p>
+                <table id="table1">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <i class="icon2 fas fa-stopwatch"></i>
+                                <h2>Launch Quickly</h2>
+                            </td>
+                            <td>
+                                <i class="icon2 fas fa-brush"></i>
+                                <h2>Stylish Design</h2>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <i class="icon2 fas fa-book-open"></i>
+                                <h2>Well Documented</h2>
+                            </td>
+                            <td>
+                                <i class="icon2 fas fa-layer-group"></i>
+                                <h2>Multiple Styles</h2>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <i class="icon2 fas fa-cog"></i>
+                                <h2>Fully Customizable</h2>
+                            </td>
+                            <td>
+                                <i class="icon2 fas fa-headphones"></i>
+                                <h2>Friendly Support</h2>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div id="portfolio">
-            <h1 class="title">Portfolio</h1>
-            <p class="text1">Donec sollicitudin libero vitae massa placerat tempor. Duis rutrum nisl eu ipsum varius, nec feugiat tortor vulputate. Integer pellentesque leo id metus dictum, a tristique tellus faucibus.</p>
-            <div id="p-button">
-                <button class="button4">ALL</button>
-                <button class="button4">WED</button>
-                <button class="button4">BRAND</button>
-                <button class="button4">DESIGN</button>
+            <div class="container">
+                <h1 class="title">Portfolio</h1>
+                <p class="text1">Donec sollicitudin libero vitae massa placerat tempor. Duis rutrum nisl eu ipsum varius, nec feugiat tortor vulputate. Integer pellentesque leo id metus dictum, a tristique tellus faucibus.</p>
+                <div id="p-button">
+                    <button class="button4">ALL</button>
+                    <button class="button4">WED</button>
+                    <button class="button4">BRAND</button>
+                    <button class="button4">DESIGN</button>
+                </div>
             </div>
         </div>
         <div id="contact">
-            <h1 class="title">Contact</h1>
-            <p id="text2">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
-            <table id="table2">
-                <tr>
-                    <td class="cell2">
-                        <i class="icon2 fas fa-mobile-alt"></i>
-                        <p>
-                            (0091) 1111 1234567 
-                            <br> 
-                            (084) 2222 1234567
-                        </p>
-                    </td>
-                    <td class="cell2">
-                        <i class="icon2 fas fa-map-marker-alt"></i>
-                        <p>
-                            69 Halsey St, New York, Ny 10002, 
-                            <br>
-                            United States
-                        </p>
-                    </td>
-                    <td class="cell2">
-                        <i class="icon2 far fa-envelope"></i>
-                        <p>
-                            support@domain.com
-                            <br>
-                            hello@domain.com
-                        </p>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="message">
-            <div>
-                <input type="text" placeholder="Enter your name">
-                <input type="text" placeholder="Enter your email address">
-                <input type="text" placeholder="Subject (Optional)">
-                <input type="text" placeholder="Here go your message">
-            </div>
-            <button>Send message</button>
+            <div class="container">
+                <h1 class="title">Contact</h1>
+                <p id="text2" style="width: 100%;">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
+                <table id="table2">
+                    <tr>
+                        <td class="cell2">
+                            <i class="icon2 fas fa-mobile-alt"></i>
+                            <p>
+                                (0091) 1111 1234567 
+                                <br> 
+                                (084) 2222 1234567
+                            </p>
+                        </td>
+                        <td class="cell2">
+                            <i class="icon2 fas fa-map-marker-alt"></i>
+                            <p>
+                                69 Halsey St, New York, Ny 10002, 
+                                <br>
+                                United States
+                            </p>
+                        </td>
+                        <td class="cell2">
+                            <i class="icon2 far fa-envelope"></i>
+                            <p>
+                                support@domain.com
+                                <br>
+                                hello@domain.com
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+                <div id="input">
+                    <div id="input1">
+                        <input class="input1a" type="text" placeholder="Enter your name">
+                        <input class="input1b" type="text" placeholder="Enter your email address">
+                    </div>
+                    <input id="input2" type="text" placeholder="Subject (Optional)">
+                    <textarea id="input3" type="text" placeholder="Here go your message"></textarea>
+                </div>
+                <button id="button5">Send message</button>
+            </div>  
         </div>
     </div>
     <script src="script.js"></script>
