--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -101,7 +101,7 @@
         <div id="contact">
             <div class="container">
                 <h1 class="title">Contact</h1>
-                <p id="text2" style="width: 100%;">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can.</p>
+                <p id="text2">Want to say hello? Want to know more about us? Give us a call or drop us an email and we will get back to you as soon as we can. ..........................................</p>
                 <table id="table2">
                     <tr>
                         <td class="cell2">
