--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -28,6 +28,15 @@
                 <i class="fab fa-pinterest"></i>
             </div>
     </div>    
+    <div id="menu">
+        <div id="tab" onclick="moveTop()">
+            <a href="#">Home</a>
+            <a href="#name">About me</a>
+            <a href="#work">What I do</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div>
     <div class="home">
         <div class="info">
             <h1>JAMES COOK</h1>
@@ -97,6 +106,7 @@
                     <button class="button4">DESIGN</button>
                 </div>
             </div>
+            
         </div>
         <div id="contact">
             <div class="container">
