--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="nav1">
             <img src="https://preview.erilisdesign.com/html/petri/assets/images/logo.png" alt="">
-            <button class="bar">
+            <button id="bar" type="button" onclick="openMenu()">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -29,7 +29,7 @@
             </div>
     </div>    
     <div id="menu">
-        <div id="tab" onclick="moveTop()">
+        <div id="tab" onclick="hideMenu()">
             <a href="#">Home</a>
             <a href="#name">About me</a>
             <a href="#work">What I do</a>
