--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="nav1">
             <img src="https://preview.erilisdesign.com/html/petri/assets/images/logo.png" alt="">
-            <button id="bar" type="button" onclick="openMenu()">
+            <button id="bar" type="button">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -55,7 +55,7 @@
                 <p class="text1">Mauris ut sem elementum, tristique velit sed, volutpat mauris. Ut interdum nibh sit amet imperdiet condimentum. Nulla sed tellus placerat, vehicula risus ac, sollicitudin quam. Quisque pharetra porta libero, a sagittis nisl tristique non. Etiam sapien purus, cursus eu pulvinar et, tempor sit amet ipsum. Sed a nisl sit amet lorem dictum hendrerit.</p>
             </div>
         </div>
-        <div class="work">
+        <div id="work">
             <div class="container">
                 <h1 class="title">What I Do</h1>
                 <p class="text1">Fusce massa dolor, mattis sed ultrices ut, placerat ut leo. Donec sed fringilla lectus, non vulputate orci. Integer id libero euismod, interdum ligula vel, porttitor magna. Sed euismod maximus finibus. Pellentesque tempus ultricies nisi at cursus. Nulla at nisi tellus. Suspendisse potenti.</p>
@@ -106,7 +106,89 @@
                     <button class="button4">DESIGN</button>
                 </div>
             </div>
-            
+            <div id="galery">
+                <article class="size1 left" style="top: 0px;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-1.jpg">
+                        <div class="p-text">
+                            <h4>Love</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size2 right" style="top: 0px;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-2.jpg">
+                        <div class="p-text">
+                            <h4>Beautiful Girl</h4>
+                            <p>Brand</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size1 right" style="top: 25vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-3.jpg">
+                        <div class="p-text">
+                            <h4>Future City</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size1 left" style="top: 33.333vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-4.jpg">
+                        <div class="p-text">
+                            <h4>Golden Gate Bridge</h4>
+                            <p>Design</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size2 right" style="top: 58.333vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-9.jpg">
+                        <div class="p-text">
+                            <h4>Beach</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size2 left" style="top: 66.666vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-6.jpg">
+                        <div class="p-text">
+                            <h4>Mountains</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size2 right" style="top: 83.333vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-10.jpg">
+                        <div class="p-text">
+                            <h4>Adventure</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size2 left" style="top: 91.666vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-11.jpg">
+                        <div class="p-text">
+                            <h4>Waterfall</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="size2 right" style="top: 108.333vw;">
+                    <a class="blog" href="">
+                        <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-5.jpg">
+                        <div class="p-text">
+                            <h4>Sea</h4>
+                            <p>Web</p>
+                        </div>
+                    </a>
+                </article>
+            </div>
         </div>
         <div id="contact">
             <div class="container">
