--- a/BT_S-Group/CV/index.html
+++ b/BT_S-Group/CV/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div id="galery">
-                <article class="size1 left" style="top: 0px;">
+                <article class="size1 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-1.jpg">
                         <div class="p-text">
@@ -116,7 +116,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right" style="top: 0px;">
+                <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-2.jpg">
                         <div class="p-text">
@@ -125,7 +125,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size1 right" style="top: 25vw;">
+                <article class="size1 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-3.jpg">
                         <div class="p-text">
@@ -134,7 +134,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size1 left" style="top: 33.333vw;">
+                <article class="size1 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-4.jpg">
                         <div class="p-text">
@@ -143,7 +143,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right" style="top: 58.333vw;">
+                <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-9.jpg">
                         <div class="p-text">
@@ -152,7 +152,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 left" style="top: 66.666vw;">
+                <article class="size2 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-6.jpg">
                         <div class="p-text">
@@ -161,7 +161,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right" style="top: 83.333vw;">
+                <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-10.jpg">
                         <div class="p-text">
@@ -170,7 +170,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 left" style="top: 91.666vw;">
+                <article class="size2 left">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-11.jpg">
                         <div class="p-text">
@@ -179,7 +179,7 @@
                         </div>
                     </a>
                 </article>
-                <article class="size2 right" style="top: 108.333vw;">
+                <article class="size2 right">
                     <a class="blog" href="">
                         <img class="img" src="https://preview.erilisdesign.com/html/petri/demo/images/portfolio/project-5.jpg">
                         <div class="p-text">
